--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -63,3 +63,22 @@ The most important problem is frequency because if we're under ideal defense, me
 
 ---
 
+### Remote storage 
+
+[summary](https://www.zhihu.com/question/23645117/answer/124708083) (might expire)
+
+[GFS](https://cs.stanford.edu/~matei/courses/2015/6.S897/slides/gfs.pdf)
+
+---
+
+### Implementation
+
+Need this tool to be portable 
+
+Ideas:
+
+* Patch :
+  * [kernel patch1](https://netkit-jh.github.io/docs/1.0.0/dev/guides/kernelpatches/#:~:text=To%20create%20kernel%20patches%2C%20firstly,use%20the%20URL%20available%20KERNEL_URL%20.&text=Once%20you%20have%20a%20.,patches%2F%20and%20name%20it%20appropiately.)
+  * [kernel patch2](https://www.kernel.org/doc/html/v4.15/process/applying-patches.html)
+  * [kernel patch3](https://medium.com/coinmonks/make-linux-kernel-better-beginners-guide-to-writing-your-first-linux-patch-1125e4891e0d)
+  * [kernel patch4](https://initialcommit.com/blog/git-format-patch)
