--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Ransome Attack"
+title:  "Ransomware Attack"
 summary: "Preparation for my summer research"
 author: moomoohorse
 date: '2023-04-26 15:58:39 -0500'
@@ -49,7 +49,21 @@ OK, if system A fails at 5 different virus and system B only fails at 1, who is 
 Need an index that's independent from protection method and attack method.
 
 * Ideal defense $\rightarrow$ no ransomware anymore
-* k-lag defence, let ransomware run $k\ \micro\text{s}$ and see the destruction.
+* k-lag defense, let ransomware run $k\ \micro\text{s}$ and see the destruction.
+
+Question :
+
+How generic should this testing framework be?
+
+Generic meeans it's independent of variables. But what are those variables. If storage system types isn't one of these variable, then I think the way is to widely test upon GFS, XFS, mySQL, postgreSQL ...
+
+---
+
+#### How does storage systems do their journal?
+
+* Most of the storage systems don't do data journal
+* Other systems do coW, but that's per transaction, the amount of recoverable files are limited.
+* 
 
 ---
 
@@ -73,7 +87,7 @@ The most important problem is frequency because if we're under ideal defense, me
 
 ### Implementation
 
-Need this tool to be portable 
+Need this tool to be portable, probably have to encapsulate the code and provide some APIs. However, the probes within BIOs should be enforced (not optional).
 
 Ideas:
 
@@ -82,3 +96,6 @@ Ideas:
   * [kernel patch2](https://www.kernel.org/doc/html/v4.15/process/applying-patches.html)
   * [kernel patch3](https://medium.com/coinmonks/make-linux-kernel-better-beginners-guide-to-writing-your-first-linux-patch-1125e4891e0d)
   * [kernel patch4](https://initialcommit.com/blog/git-format-patch)
+
+---
+
