--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -101,4 +101,4 @@ Ideas:
 
 ### Windows & IO
 
-* [iso](https://www.softlay.com/downloads/windows-7-home-basic?download=links&opt=1)
+* [iso](https://www.softlay.com/downloads/windows-7-home-basic?download=links&opt=1) (don't press anything if it prompts you to use existing CD ROM... it will repeat the installation)
