--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -50,20 +50,52 @@ Need an index that's independent from protection method and attack method.
 
 * Ideal defense $\rightarrow$ no ransomware anymore
 * k-lag defense, let ransomware run $k\ \micro\text{s}$ and see the destruction.
+  * Destruction means the unrecoverable data in mapped disk(target storage region which stores targeted files to ransomware)
 
 Question :
 
 How generic should this testing framework be?
 
-Generic meeans it's independent of variables. But what are those variables. If storage system types isn't one of these variable, then I think the way is to widely test upon GFS, XFS, mySQL, postgreSQL ...
+
+
+---
+
+### Generic
+
+Generic meeans the testing framework should be  independent of variables. But what are those variables. If storage system types isn't one of these variable, then I think the way is to widely test upon GFS, XFS, mySQL, postgreSQL ...
+
+Variable can also include the type of ransomware : 
+
+---
+
+#### Observation 
+
+* Current ransomware are hard to work with because
+  * server might be off-line (20 / 20 aren't working when I randomly fetch ransomwares from virus set).
+  * only available on windows, hard to probe
+  * some ransomware destorys the system(not the entire system, just ban the other ransomwares and applications), hard to test, need to **reload** the system every time, reload windows takes ~10 minutes
+
+---
+
+* With working ransomware, still
+  * hard to standardize, why choose this one over other ransomwares?
+  * not summable (fs lost 70% data over ransomware1, 80% data over ransomware2, another file system fs' lost 90% data over ransomware1 50% data over ransomware2), which is better? Can we take sum over any data?
+
+---
+
+### Standardized ransomware
+
+* Healthy : do nothing except for encryption data
+* Transparent : can be adjusted for testing framework
+* Working : can encryt data without the existence of server.
+* Flexible : can do batch test.
 
 ---
 
 #### How does storage systems do their journal?
 
-* Most of the storage systems don't do data journal
-* Other systems do coW, but that's per transaction, the amount of recoverable files are limited.
-* 
+* Many of the storage systems don't do data journal, they do metadata journal only for performance.
+* Some systems do coW, but that's per transaction, the amount of recoverable files are limited.
 
 ---
 
@@ -73,7 +105,7 @@ Generic way to defend against ransomware.
 
 So need to study journal and logging behavior...
 
-The most important problem is frequency because if we're under ideal defense, meaning ransom ware can be detected as soon 
+The most important problem is frequency and expiration rate of journal and logs, I think.
 
 ---
 
@@ -89,7 +121,7 @@ The most important problem is frequency because if we're under ideal defense, me
 
 Need this tool to be portable, probably have to encapsulate the code and provide some APIs. However, the probes within BIOs should be enforced (not optional).
 
-Ideas:
+~~Ideas, now I don't think these are going to help~~:
 
 * Patch :
   * [kernel patch1](https://netkit-jh.github.io/docs/1.0.0/dev/guides/kernelpatches/#:~:text=To%20create%20kernel%20patches%2C%20firstly,use%20the%20URL%20available%20KERNEL_URL%20.&text=Once%20you%20have%20a%20.,patches%2F%20and%20name%20it%20appropiately.)
@@ -101,4 +133,14 @@ Ideas:
 
 ### Windows & IO
 
-* [iso](https://www.softlay.com/downloads/windows-7-home-basic?download=links&opt=1)
+* [Windows7 iso](https://www.softlay.com/downloads/windows-7-home-basic?download=links&opt=1)
+* Windows 10 ISO should be available...
+
+
+--- 
+
+
+### Current obstacles
+
+1. Don't really know how to trace journals and logs(def unable to do it in block level) in **Windows** and with storage systems that I **can't access source code**.
+2. Might need to build a standardized ransomware(may need to study the repos on github a little bit)
