--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -80,6 +80,7 @@ Variable can also include the type of ransomware :
 * With working ransomware, still
   * hard to standardize, why choose this one over other ransomwares?
   * not summable (fs lost 70% data over ransomware1, 80% data over ransomware2, another file system fs' lost 90% data over ransomware1 50% data over ransomware2), which is better? Can we take sum over any data?
+  * Most of ransomwares disregard remote backups, while having access to credential manager.
 
 ---
 
@@ -105,7 +106,60 @@ Generic way to defend against ransomware.
 
 So need to study journal and logging behavior...
 
-The most important problem is frequency and expiration rate of journal and logs, I think.
+The most important problem is frequency and expiration rate of those backups, I think.
+
+Now I think those can be omitted because index should be from "stationary" data backups and calculate their ratios.
+
+---
+
+### Remote backups : crisis on credential manager
+
+The following 3 slides are from https://www.nirsoft.net/utils/credentials_file_view.html
+
+#### Data Stored In Credentials Files
+
+Windows operating system stores the following information inside Credentials files:
+* Login passwords of remote computers on your LAN.
+* Passwords of mail accounts on exchange server (stored by Microsoft Outlook)
+* Windows Live session information.
+
+--- 
+
+* Remote Desktop 6 user\password information.
+* Internet Explorer 7.x and 8.x: passwords of password-protected Web sites ("Basic Authentication" or "Digest Access Authentication")
+* Password of MSN Messenger / Windows Messenger accounts
+
+---
+
+#### Credentials File Location
+
+You can find the Credentials files of Windows in the following locations:
+```
+C:\Users\[User Profile]\AppData\Roaming\Microsoft\Credentials (Windows Vista and later)
+C:\Users\[User Profile]\AppData\Local\Microsoft\Credentials (Windows Vista and later)
+C:\Windows\system32\config\systemprofile\AppData\Local\Microsoft\Credentials (Windows 8 and later)
+C:\Documents and Settings\[User Profile]\Application Data\Microsoft\Credentials (Windows XP)
+C:\Documents and Settings\[User Profile]\Local Settings\Application Data\Microsoft\Credentials (Windows XP)
+```
+---
+
+Those are no valid locations, but I duplicated `.crd` file to desktop and find the encrypted results.
+
+And there are ways to decryt those account / password 
+
+> CredentialsFileView is a simple tool for Windows that decrypts and displays the passwords and other data stored inside Credentials files of Windows. 
+
+---
+
+#### Ransomware operates at your comp. Message protection will be likely to fail.
+
+You logged in to onedrive today, so your cached verification will bypass the text-message-verification.
+
+Then you have a ransomware.
+
+But in testing framework's perspective, what are we testing against? The expiration rate of cloud service?
+
+**Are we testing subject storage system or the cloud backup sub-system?**
 
 ---
 
@@ -142,5 +196,17 @@ Need this tool to be portable, probably have to encapsulate the code and provide
 
 ### Current obstacles
 
-1. Don't really know how to trace journals and logs(def unable to do it in block level) in **Windows** and with storage systems that I **can't access source code**.
-2. Might need to build a standardized ransomware(may need to study the repos on github a little bit)
+1. NTFS does NOT have data journal. Typical ransomwares don't exist on linux.
+
+2. Don't really know how to trace journals and logs(def unable to do it in block level) in **Windows** and with storage systems that I **can't access source code**.
+    * Implicit problem, layering : how to trace data backups ?  
+3. Might need to build a standardized ransomware(may need to study the repos on github a little bit)
+
+4. False positive : it happens to many Filesystem Filters based detecting tools.
+
+---
+
+
+### Current obstacles (cont.)
+
+5. I don't think logal backups have any meaning because backups essentially are files.
