--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -14,6 +14,8 @@ theme : gaia
 class : invert
 ---
 
+Slides at [slides](../assets/_slides/2023-04-26-ransom.pdf)
+
 # Ransome 
 
 ## Related resources
