add last important question

--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -212,3 +212,5 @@ Need this tool to be portable, probably have to encapsulate the code and provide
 ### Current obstacles (cont.)
 
 5. I don't think logal backups have any meaning because backups essentially are files.
+
+6. **If local backups failed all the time, then aren't we just testing the cloud service's security. a.k.a. how likely it can be accessed by ransomware?**
