update ransomware thoughts

--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -73,9 +73,9 @@ Variable can also include the type of ransomware :
 #### Observation 
 
 * Current ransomware are hard to work with because
-  * server might be off-line (20 / 20 aren't working when I randomly fetch ransomwares from virus set).
+  * server might be off-line (Many can't connect to server).
   * only available on windows, hard to probe
-  * some ransomware destorys the system(not the entire system, just ban the other ransomwares and applications), hard to test, need to **reload** the system every time, reload windows takes ~10 minutes
+  * some ransomware destorys the system (ban all the system-level operation, not allowing you to probe any system-level data)
 
 ---
 
@@ -204,12 +204,14 @@ Need this tool to be portable, probably have to encapsulate the code and provide
     * Implicit problem, layering : how to trace data backups ?  
 3. Might need to build a standardized ransomware(may need to study the repos on github a little bit)
 
-4. False positive : it happens to many Filesystem Filters based detecting tools.
+4. False positive : it happens to many Filesystem Filters based detecting tools.  
 
 ---
 
 
 ### Current obstacles (cont.)
+
+4. More comments on false positive : it also suggests a software-subjected detection is worse than system-subjected detection.
 
 5. I don't think logal backups have any meaning because backups essentially are files.
 
