add update on Testing framework

--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -216,3 +216,82 @@ Need this tool to be portable, probably have to encapsulate the code and provide
 5. I don't think logal backups have any meaning because backups essentially are files.
 
 6. **If local backups failed all the time, then aren't we just testing the cloud service's security. a.k.a. how likely it can be accessed by ransomware?**
+
+--- 
+
+
+## Update : Design and New thinking (2023-05-04)
+
+Several things mentioned in the meeting
+
+---
+
+* We need to target several storage systems, the only thing we need to care about is the data backups.
+  * Most of the targeted systems only have one copy of data (e.g. NTFS only logs metadata)
+  * So we need to simulate remote backups
+    * We can be real by using [One Drive API](https://learn.microsoft.com/en-us/onedrive/developer/rest-api/concepts/permissions_reference?view=odsp-graph-online) & [video](https://www.youtube.com/watch?v=Ok8O_QnrSBI&ab_channel=JieJenn) & [Google Cloud API](https://cloud.google.com/storage-transfer/docs/apis)
+    * Or we can **fake it** so that our testing framework does NOT have that many dependencies
+
+---
+
+* Testing framework needs to utilize **several core features of ransomwares**.
+  * To do that we need to analyze the behaviors of ransomwares (existing)
+
+* We can adjust assumptions on 
+  * ransomware privilege level
+  * storage backup time (meaning at those time the back-up storage is connected to OS)
+  * back-up frequency (we have backup)
+
+---
+
+### Mini filter, our solution to NTFS  
+
+[mini filter](https://github.com/microsoft/Windows-driver-samples/blob/main/filesys/miniFilter/minispy/README.md)
+[mini filter APIs](https://www.easefilter.com/kb/fltkernel-fltcreatefile.htm)
+
+---
+
+### Pre-processing Scanning original Storage System
+
+* Scan for file access
+
+* Scan for 
+
+---
+
+### Solution to "Discrete" statistics
+
+What if the backups are either all-encrypted or all-safe.
+
+Divide into two aspectes
+
+* Security
+
+
+* Consistency
+
+
+---
+
+### Log-strcutred FS : Natural Killer of Ransomware
+
+[f2fs](https://android.googlesource.com/kernel/common/+/22f837981514e157f8f9737b25ac6d7d90a14006/Documentation/filesystems/f2fs.txt)
+
+* I can use GC attack to clear your logs
+
+[linux ransomware](https://www.cynet.com/ransomware/linux-ransomware-attack-anatomy-examples-and-protection/)
+
+---
+
+#### More notes on GC : F2FS
+
+>  This policy selects a victim section not only based on its utilization but also its “age”. F2FS infers the age of a section by averaging the age of segments in the section, which, in turn, can be obtained from their last modification time recorded in SIT. With the cost-benefit policy, F2FS gets another chance to separate hot and cold data.
+
+---
+
+### Bonus : IPLFS
+
+https://www.usenix.org/conference/atc22/presentation/kim-juwon
+
+---
+
