--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -14,11 +14,20 @@ theme : gaia
 class : invert
 ---
 
+<style>
+img[alt~="center"] {
+  display: block;
+  margin: 0 auto;
+}
+</style>
+
 Slides at [slides](../assets/slides/2023-04-26-ransom.pdf)
+
+---
 
 # Ransome 
 
-## Related resources
+## Some Related Resources
 
 [minifilter](https://learn.microsoft.com/en-us/windows-hardware/drivers/ifs/filter-manager-concepts)
 
@@ -111,6 +120,15 @@ So need to study journal and logging behavior...
 The most important problem is frequency and expiration rate of those backups, I think.
 
 Now I think those can be omitted because index should be from "stationary" data backups and calculate their ratios.
+
+---
+
+### Backup Resources
+
+[AFS backup](https://docs.openafs.org/AdminGuide/HDRWQ248.html#HDRWQ249)
+
+[backup command](https://www.ibm.com/docs/en/aix/7.1?topic=b-backup-command)
+
 
 ---
 
@@ -270,6 +288,15 @@ Divide into two aspectes
 
 * Consistency
 
+---
+
+#### Notes on security
+
+In data backup industry, security usually means how safe the remote server is, that is, even when malware has **external** access to the server, how safe your data is. 
+
+[They](https://www.barracuda.com/products/data-protection/backup/features) typically do it via data encryption. 
+
+Note that this is no longer valid to ransomware because ransomware can have the same access right as normal user
 
 ---
 
@@ -293,5 +320,68 @@ Divide into two aspectes
 
 https://www.usenix.org/conference/atc22/presentation/kim-juwon
 
+& 
+
+[How to center the image in marp](https://github.com/marp-team/marpit/issues/141)
+
+[network cs425](https://www.cse.iitk.ac.in/users/dheeraj/cs425/index.html)
+[DFS cs440](http://www.cs.cmu.edu/~dga/15-440/S14/syllabus.html)
+
+
+
 ---
 
+### Current Structure of Our Testing Framework
+
+![center ransomtest](../assets/img/ransomtestLayering.png)
+
+---
+
+### Ransomware Report and Key Characteristics
+
+> and deleting the shadow copy of user fles
+
+
+> According to (Kharraz et al. 2016) there are three ways ransomware encrypts fles: (i) overwriting originals iginals, and (iii) encryption and secure deletion of the originals
+
+`rm` calls `unlink`. They have slight difference but for testing system, they are basically the same.
+
+
+
+---
+
+### Tracing 
+
+[strace](https://man7.org/linux/man-pages/man1/strace.1.html)
+
+blktrace, blkparse, btt
+
+```
+sudo apt-get install blktrace
+```
+
+---
+
+
+[Report](https://crimesciencejournal.biomedcentral.com/articles/10.1186/s40163-019-0097-9)
+
+![center ransomtest](../assets/img/lit01.png)
+
+---
+
+### Mapping from Ransomware Set to Standardized Ransomware
+
+[ML Rans](https://arxiv.org/pdf/1609.03020.pdf)
+
+* Need to show ransomware can be mapped to a certain group of characteristics
+* Many characteristics about ransomware are encryption related, so it's not related to target system
+* So the only sets of characteristics should be :
+  * 
+
+---
+
+### Propagate
+
+[shared folder](https://threatpost.com/diary-of-a-ransomware-victim/117877/)
+
+Might need to check AFS, NFS, and more sharing related storage systems to check if the webservice network is secure enough.
