--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -20,8 +20,7 @@ img[alt~="center"] {
   margin: 0 auto;
 }
 </style>
-
-Slides at [slides](../assets/slides/2023-04-26-ransom.pdf)
+Slides at [slides](<../assets/slides/testing framework.pdf>)
 
 ---
 
