create DFS post

--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -5,7 +5,7 @@ summary: "Preparation for my summer research"
 author: moomoohorse
 date: '2023-04-26 15:58:39 -0500'
 category: ['research']
-thumbnail: /assets/img/posts/bytefs.png
+thumbnail: /assets/img/posts/ransStruct.png
 keywords: undergraduate-research
 permalink: /blog/ransome-research
 usemathjax: true
@@ -384,3 +384,13 @@ sudo apt-get install blktrace
 [shared folder](https://threatpost.com/diary-of-a-ransomware-victim/117877/)
 
 Might need to check AFS, NFS, and more sharing related storage systems to check if the webservice network is secure enough.
+
+
+---
+
+
+### NFS
+
+[main page](https://linux-nfs.org/wiki/index.php/Main_Page)
+[server client setup(Quick)](https://nfs.sourceforge.net/)
+[tutorial](https://nfs.sourceforge.net/nfs-howto/)
