ransomware attack & slides published

--- a/docs/_posts/2023-04-26-ransom.md
+++ b/docs/_posts/2023-04-26-ransom.md
@@ -268,11 +268,9 @@ Several things mentioned in the meeting
 
 ---
 
-### Pre-processing Scanning original Storage System
+### ACL problem
 
-* Scan for file access
-
-* Scan for 
+[ACL](https://www.kernel.org/doc/ols/2010/ols2010-pages-19-32.pdf)
 
 ---
 
@@ -394,3 +392,9 @@ Might need to check AFS, NFS, and more sharing related storage systems to check 
 [main page](https://linux-nfs.org/wiki/index.php/Main_Page)
 [server client setup(Quick)](https://nfs.sourceforge.net/)
 [tutorial](https://nfs.sourceforge.net/nfs-howto/)
+
+---
+
+### Ext4 Mapping problem
+
+[extent](http://ext2read.blogspot.com/2010/03/how-ext4-extents-work-earlier-ext2-and.html)
