--- a/docs/_posts/2023-05-20-dfs.md
+++ b/docs/_posts/2023-05-20-dfs.md
@@ -133,4 +133,15 @@ Consistency -> Low performance
 
 In ransomware testing framework, both should be subject to test.
 
- 
+---
+
+### Non-det. events
+
+- Inputs - packets (network packets) - [data + interrupt]
+- Weird instruction like randomness (or multicore) 
+
+Inspiration : Can we use the same non-det. events dependent logging method for normal data replication? 
+
+Why ? 
+
+In higher level, we don't even have to consider multi-core complexity.
