update 2023 wrap up

--- a/docs/_posts/2023-12-17-summary-2023.md
+++ b/docs/_posts/2023-12-17-summary-2023.md
@@ -13,7 +13,7 @@ usemathjax: true22
 
 # 2023 is ending, 2024 is about to start
 
-70% of the content is too private, personal and aggressive. If you know me, those content possibly can make you uncomfortable so I removed them. This is not really a place to get to know me as a person (please talk to me directly and not via social media if possible). So I delete them and move them to my personal doc.
+70% of the content is too private, personal. If you know me, those content possibly can make you (or me) uncomfortable so I removed them. This is not really a place to get to know me as a person, as it is originally solely a tech blog. So I delete them and move them to my personal doc.
 
 ## In 2023, what have I done?
 
@@ -48,12 +48,12 @@ Completely transferred to personal doc.
 * Sleep at 23:00 regardless of circumstances
   * No one can stop you from doing this.
 * Be brave. Be strategically aggressive. Reject Shame.
-  * The objective is to **stay in the game** and try to aim for a victory in my life.
-  * Find a **constructive** *strategy* for all the courses of my life.
+  * The objective is to **stay in the game** and try to aim for some wins in my life.
+  * Find a **constructive** *strategy* for almost all problems.
   * Then I will stop caring about what other people say and stop getting too emotional about people.
-  * Get myself close to those who want to fight alongside with you, despite the hardship. 
-    * Some people might appear to behave like this initially, but people can change. ( **perseverance counts**)
-    * For the people who are not fighters, and those who can't take risks WITH YOU, abandon them immediately and directly.
+  * Get myself close to those who are willing to fight alongside with me, despite the hardship. 
+    * People might appear to stay loyal and share the same ambition in the beginning, but people change. (**perseverance counts**)
+    * For those who are not fighters, meaning those don't have soldier-on spirit, and those who can't take risks WITH YOU, abandon them immediately.
 
 ## Some Posts I Plan to Publish in 2024
 
@@ -70,3 +70,42 @@ Completely transferred to personal doc.
 * A post about OS & file system
 * A post about dopamine & neuro-science
 
+
+
+## [Fix] Jan. 6th
+
+With the new year passed, for 5 days approximately, here are some additional thoughts.
+
+## In 2023, what changed me significantly? [Fix]
+
+1. Connections
+
+   * I found myself left with basically no human connection every day.
+   * For countless times, I could just do my stuff without having any communication with anyone for a long period of time (2-3 days).
+   * And the only communication I had was being aggressively challenged, sometimes attacked, professionally and personally for a long period of time (2-3 hours).
+
+2. Depth vs Width
+
+   * I'm all for depth, meaning I think if you can't be great, excellent, passionate about one thing, and you claim you can do 10 things, then I'd define you as a superficial human being, with no interests in being associated with you.
+   * I'm also for width. Knowing many aspects of life can be inspiring and lead to innovation and motivation. Neuro-science and Psychology really attracts me and I read many books. Meditation is also intriguing, and through some practice, it helps me with tons of things.
+   * What's hard is striking a balance between these 2 things. And this extent, to which I devote myself into getting deeper in one field versus knowing more by reading and reaching out, fluctuates heavily.
+
+   
+
+## In 2024, what should I do? [Fix]
+
+1. Connections
+
+   * Don't blame myself / others for not having enough interaction. In years before, I wanted to focus and fight for what I want and then I made my choices and it came out with many things, which is great. I can't expect that I fight for these things at no cost. The world does not center around me and no one can have it all. Period. 
+   * But what I can do is to be grateful to what's left and those who is supporting and caring about me at the moment. And there are many people who I definitely should be grateful to. I should care about their things and do my best for them.
+   * Be constructive. Don't think pessimistically, that this will keep going on. Maybe this will go on for a long time, but I MUST keep trying to reconnect to the rest of the world.
+
+2. Depth vs Width
+
+   * Don't let people disrupt you. Depth matters! It defines my value. The world is full of superficial people who pretend to be good at something. Their insights and ideas are like 9-year-old. Don't be one of them. Find my passion and drive deep.
+   * Width must follow depth. After I made some progress in one field, I must also pay attention to what intrigues me in other places.
+   * Stay passionate. 
+   * Stay constructive.
+   * Don't blame myself too hard.
+
+   
