--- a/docs/_posts/2023-12-17-summary-2023.md
+++ b/docs/_posts/2023-12-17-summary-2023.md
@@ -57,16 +57,21 @@ Completely transferred to personal doc.
 
 ## Some Posts I Plan to Publish in 2024
 
+I want to add something for this plan. **It seems an intern (not me or my friends) at the company leaks some code & data and got super fired.**
+And it seems that I signed an NDA when I took the job.(wat??? why didn't I remember it?)
+Sooooooooooooo, the works that I spent most of my time doing seem not sharable. This means I have to adjust the posts I plan to write.
+
+
 ### January & February
 
 * Polish (actually write) the processor post
-* Deep Speed scheduling Analysis
-* Semantic Kernel Application 
 * A post about courage & vulnerability
+* A stupid post about my schedule
 
 ### March ~ May
 
 * A post about my MATH TA experience
+* A post about RAG
 * A post about OS & file system
 * A post about dopamine & neuro-science
 
