--- a/docs/_posts/2025-02-11-summary-2024.md
+++ b/docs/_posts/2025-02-11-summary-2024.md
@@ -24,6 +24,8 @@ I couldn't even feel the time passing by. In some senses, I feel like I'm still 
 
 - My great friend, Zihan Xu, passed away due to an accident during his first phd year in SJTU. I present my greatest condolences. 
 
+We had probably the longest friendship among all my friends. We met each other in 2016, when we were both a fresh OIer in Zhilin High School.
+
 During my last few months in China, we spent much time together. He is only 2 floors away from my office. We had a lot of fun together. 
 
 I can't believe it when I heard the news from our high school OI team group chat. Up to this point, I still can't believe he's gone. 
